Refactoring some old code